--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
           <img
             src="images/Slide1.jpeg"
             class="d-block w-100"
-            height="560px"
+            height="550px"
             alt="..."
           />
           <div
             class="carousel-caption d-block"
-            style="background-color: #247a556b"
+            style="background-color: #247a55a3"
           >
             <h5>First slide label</h5>
             <p>Some representative placeholder content for the first slide.</p>
@@ -207,12 +207,12 @@
           <img
             src="images/Slide2.jpeg"
             class="d-block w-100"
-            height="560px"
+            height="550px"
             alt="..."
           />
           <div
             class="carousel-caption d-block"
-            style="background-color: #247a556b"
+            style="background-color: #247a55a3"
           >
             <h5>Second slide label</h5>
             <p>Some representative placeholder content for the second slide.</p>
@@ -222,12 +222,12 @@
           <img
             src="images/Slide3.jpeg"
             class="d-block w-100"
-            height="560px"
+            height="550px"
             alt="..."
           />
           <div
             class="carousel-caption d-block"
-            style="background-color: #247a556b"
+            style="background-color: #247a55a3"
           >
             <h5>Third slide label</h5>
             <p>Some representative placeholder content for the third slide.</p>
@@ -252,6 +252,69 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
+    </div>
+
+    <!-- <br /> -->
+    <!-- <div align="center"><hr width="300vw" /></div> -->
+    <!-- <br /> -->
+
+    <div
+      class="container-fluid"
+      style="
+        background-color: rgba(128, 128, 128, 0.139);
+        padding-top: 20px;
+        padding-bottom: 20px;
+      "
+    >
+      <div class="container">
+        <div class="text-center">
+          <h1 style="font-weight: 700">Some of our work</h1>
+        </div>
+        <div class="container" align="center">
+          <img
+            src="images/Work images/wk1.jpeg"
+            class="img-thumbnail img-fluid"
+            alt="..."
+            height="400"
+            width="400"
+          />
+          <img
+            src="images/Work images/wk2.jpeg"
+            class="img-thumbnail img-fluid"
+            alt="..."
+            height="400"
+            width="400"
+          />
+          <img
+            src="images/Work images/wk3.jpeg"
+            class="img-thumbnail img-fluid"
+            alt="..."
+            height="400"
+            width="400"
+          />
+          <img
+            src="images/Work images/wk4.jpeg"
+            class="img-thumbnail img-fluid"
+            alt="..."
+            height="400"
+            width="400"
+          />
+          <img
+            src="images/Work images/wk5.jpeg"
+            class="img-thumbnail img-fluid"
+            alt="..."
+            height="400"
+            width="400"
+          />
+          <img
+            src="images/Work images/wk6.jpeg"
+            class="img-thumbnail img-fluid"
+            alt="..."
+            height="400"
+            width="400"
+          />
+        </div>
+      </div>
     </div>
   </body>
 
