--- a/index.html
+++ b/index.html
@@ -271,48 +271,296 @@
           <h1 style="font-weight: 700">Some of our work</h1>
         </div>
         <div class="container" align="center">
-          <img
-            src="images/Work images/wk1.jpeg"
-            class="img-thumbnail img-fluid"
-            alt="..."
-            height="400"
-            width="400"
-          />
-          <img
-            src="images/Work images/wk2.jpeg"
-            class="img-thumbnail img-fluid"
-            alt="..."
-            height="400"
-            width="400"
-          />
-          <img
-            src="images/Work images/wk3.jpeg"
-            class="img-thumbnail img-fluid"
-            alt="..."
-            height="400"
-            width="400"
-          />
-          <img
-            src="images/Work images/wk4.jpeg"
-            class="img-thumbnail img-fluid"
-            alt="..."
-            height="400"
-            width="400"
-          />
-          <img
-            src="images/Work images/wk5.jpeg"
-            class="img-thumbnail img-fluid"
-            alt="..."
-            height="400"
-            width="400"
-          />
-          <img
-            src="images/Work images/wk6.jpeg"
-            class="img-thumbnail img-fluid"
-            alt="..."
-            height="400"
-            width="400"
-          />
+          <div class="row g-3 row-cols-xxl-4">
+            <div class="col p-0">
+              <img
+                src="images/Work images/wk1.jpeg"
+                class=""
+                alt="..."
+                height=" 300"
+                width="300"
+              />
+            </div>
+            <div class="col p-0">
+              <img
+                src="images/Work images/wk2.jpeg"
+                class=""
+                alt="..."
+                height=" 300"
+                width="300"
+              />
+            </div>
+            <div class="col p-0">
+              <img
+                src="images/Work images/wk3.jpeg"
+                class=""
+                alt="..."
+                height=" 300"
+                width="300"
+              />
+            </div>
+            <div class="col p-0">
+              <img
+                src="images/Work images/wk4.jpeg"
+                class=""
+                alt="..."
+                height=" 300"
+                width="300"
+              />
+            </div>
+            <div class="col p-0">
+              <img
+                src="images/Work images/wk5.jpeg"
+                class=""
+                alt="..."
+                height=" 300"
+                width="300"
+              />
+            </div>
+            <div class="col p-0">
+              <img
+                src="images/Work images/wk6.jpeg"
+                class=""
+                alt="..."
+                height=" 300"
+                width="300"
+              />
+            </div>
+            <div class="col p-0">
+              <img
+                src="images/Work images/wk7.jpeg"
+                class=""
+                alt="..."
+                height=" 300"
+                width="300"
+              />
+            </div>
+            <div class="col p-0">
+              <img
+                src="images/Work images/wk8.jpeg"
+                class=""
+                alt="..."
+                height=" 300"
+                width="300"
+              />
+            </div>
+            <div class="col p-0">
+              <img
+                src="images/Work images/wk9.jpeg"
+                class=""
+                alt="..."
+                height=" 300"
+                width="300"
+              />
+            </div>
+            <div class="col p-0">
+              <img
+                src="images/Work images/wk10.jpeg"
+                class=""
+                alt="..."
+                height=" 300"
+                width="300"
+              />
+            </div>
+            <div class="col p-0">
+              <img
+                src="images/Work images/wk11.jpeg"
+                class=""
+                alt="..."
+                height=" 300"
+                width="300"
+              />
+            </div>
+            <div class="col p-0">
+              <img
+                src="images/Work images/wk12.jpeg"
+                class=""
+                alt="..."
+                height=" 300"
+                width="300"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="container-fluid"
+      style="padding-top: 20px; padding-bottom: 20px"
+    >
+      <div class="container">
+        <div class="text-center">
+          <h1 style="font-weight: 700">Services we offer</h1>
+        </div>
+        <div class="container" align="center">
+          <div class="row g-3 row-cols-xxl-4">
+            <div class="col p-0">
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/Services images/Sofa.jpeg"
+                  class="card-img-top"
+                  alt="..."
+                  height="300"
+                  width="300"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Sofa</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col p-0">
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/Services images/Chair.jpeg"
+                  class="card-img-top"
+                  alt="..."
+                  height="300"
+                  width="300"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Mattresses</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col p-0">
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/Services images/Curtain.jpeg"
+                  class="card-img-top"
+                  alt="..."
+                  height="300"
+                  width="300"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Curtain</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col p-0">
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/Services images/Chair.jpeg"
+                  class="card-img-top"
+                  alt="..."
+                  height="300"
+                  width="300"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Chair</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col p-0">
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/Services images/Sofa.jpeg"
+                  class="card-img-top"
+                  alt="..."
+                  height="300"
+                  width="300"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Pillow</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col p-0">
+              <div class="card" style="width: 18rem">
+                <img
+                  src="images/Services images/Curtain.jpeg"
+                  class="card-img-top"
+                  alt="..."
+                  height="300"
+                  width="300"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Table</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="container-fluid"
+      style="
+        padding-top: 20px;
+        padding-bottom: 20px;
+        background-color: rgba(128, 128, 128, 0.139);
+      "
+    >
+      <div class="container">
+        <div class="text-center">
+          <h1 class="mb-3" style="font-weight: 700">Our Story</h1>
+          <div class="row" align="center">
+            <!-- <div class="col">
+              <image
+                class="img-fluid"
+                src="images/Story.jpg"
+                height="400"
+                width="600"
+              />
+            </div> -->
+            <div class="col">
+              <div>
+                <h3 class="fs-2">The company Overview</h3>
+                <p style="font-size: large">
+                  Founded in 1978 by Shamsuddin Umar Gouri, our company brings
+                  over 46 years of experience in the interior design industry.
+                  Under the current leadership of Salman Shamsuddin Umar Gouri,
+                  we continue to deliver timeless and innovative design
+                  solutions, blending tradition with modern elegance to create
+                  spaces that truly reflect our clients' unique tastes and
+                  needs.
+                </p>
+                <h3 class="fs-2">How We Work</h3>
+                <p style="font-size: large">
+                  Our process begins with understanding your vision and
+                  transforming it into a thoughtful design. With expert
+                  craftsmanship and attention to detail, we bring your dream
+                  space to life..
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
